# Task-Monitoring-Bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  cli.py  config.py  conftest.py  get_my_id.py  main.py  models.py  orchestrator.py  pyproject.toml  scheduler.py
adapters/: __init__.py  advego.py  base.py  fake.py  ipgold.py  prskill.py  smmcode.py  unu.py
agent/: .env.example  SOUL.md
app/: __init__.py  main.py  state.py
autopilot/: __init__.py  models.py  ollama.py  runner.py
bot/: handlers.py  keyboards.py
db/: __init__.py  database.py  schema.sql
docs/: DEMO.md  DESIGN.md  GOOGLE_SHEETS_SETUP.md  demo.html
mcp_server/: __init__.py  server.py
posts/: watcher.py
reporting/: __init__.py  sheets.py
scheduler/: __init__.py  jobs.py
scripts/: run_backend.sh  run_local_openclaw_gateway.sh  run_openclaw_gateway.sh  telegram_mtproto_setup.py  watchdog.py  yandex_oauth.py
tests/: test_activity_metrics.py  test_advego.py  test_app_security.py  test_audit_fixes.py  test_autopilot.py  test_bot_interactive.py  test_bot_lifecycle.py  test_day1_audit.py  test_day6.py  test_demo.py  test_e2e_real.py  test_fault_injection.py  test_idempotency.py  test_ipgold.py  test_live_roundtrip.py  test_main_runtime.py  test_orchestrator.py  test_prskill.py  test_recheck_and_reports.py  test_service_step.py  test_sheets.py  test_smmcode.py  test_smoke.py  test_telegram_mtproto.py  test_telegram_reports.py  test_unu.py  test_verification.py  test_web_dashboard.py
verification/: __init__.py  activity.py  activity_metrics.py  base.py  fake.py  metrica.py  (+3 more)
(+30 files in other folders)
