[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "exchange-monitor-bot"
version = "0.1.0"
description = "Commercial Telegram bot for managing SMM and microtask exchange order lifecycles"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "gspread>=6.0",
    "google-auth>=2.29",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools]
py-modules = ["config", "models", "cli", "conftest", "main"]
packages = [
    "db",
    "adapters",
    "autopilot",
    "bot",
    "posts",
    "reporting",
    "verification",
    "web_dashboard",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# Bilingual project: Russian comments / strings are intentional and unambiguous
# in context. The ambiguous-unicode rules misfire on Cyrillic letters that
# visually resemble Latin (e.g. С / C, В / B).
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-q"
